--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Git Demo</title>
+    <title>Git Workshop</title>
 </head>
 <body>
 
@@ -12,7 +12,7 @@
     <h2>Git Demo2</h2>
 
     <h3>Git Demo3</h3>
-
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, non fugit porro ducimus placeat nulla veritatis, nam doloremque blanditiis ea a, illum ut quos velit aperiam maxime totam ipsum. Mollitia.</p>
 
 </body>
 </html>
